--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>docker-springboot-sample</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,6 +33,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>docker-springboot-sample</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
